--- a/Benday.JsonUtilities/Benday.JsonUtilities.csproj
+++ b/Benday.JsonUtilities/Benday.JsonUtilities.csproj
@@ -1,13 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
+        <LangVersion>latest</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="microsoft.csharp" Version="4.7.0" />
-  </ItemGroup>
-  
+    <ItemGroup>
+
+        <PackageReference Include="System.Text.Json" Version="7.0.2" />
+    </ItemGroup>
+
 
 </Project>
