--- a/Benday.JsonUtilities/Benday.JsonUtilities.csproj
+++ b/Benday.JsonUtilities/Benday.JsonUtilities.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
@@ -13,30 +12,29 @@
         <RepositoryUrl>https://github.com/benday-inc/Benday.JsonUtilities.git</RepositoryUrl>
         <PackageIcon>bdc_mark_128_128.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-        <AssemblyVersion>4.1.0.0</AssemblyVersion>
-        <Version>$(VersionPrefix)4.1.0</Version>
+        <AssemblyVersion>5.0.0.0</AssemblyVersion>
+        <Version>$(VersionPrefix)5.0.0</Version>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReleaseNotes>            
+            v5.0 - Upgraded System.Text.Json dependency to .net core 8; Added support for setting json values as boolean values
+        </PackageReleaseNotes>
     </PropertyGroup>
-
     <ItemGroup>
-      <None Include="..\bdc_mark_128_128.png">
-        <Pack>True</Pack>
-        <PackagePath>\</PackagePath>
-      </None>
-      <None Include="..\LICENSE">
-        <Pack>True</Pack>
-        <PackagePath>\</PackagePath>
-      </None>
-      <None Include="..\README.md">
-        <Pack>True</Pack>
-        <PackagePath>\</PackagePath>
-      </None>
+        <None Include="..\bdc_mark_128_128.png">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
     </ItemGroup>
-
     <ItemGroup>
-
-        <PackageReference Include="System.Text.Json" Version="7.0.*" />
+        <PackageReference Include="System.Text.Json"
+                          Version="8.*" />
     </ItemGroup>
-
-
 </Project>
