started impl of array value editing

--- a/Benday.JsonUtilities.UnitTests/Benday.JsonUtilities.UnitTests.csproj
+++ b/Benday.JsonUtilities.UnitTests/Benday.JsonUtilities.UnitTests.csproj
@@ -38,4 +38,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="gab-deploy.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
